--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,11 +1,21 @@
 name: Go
 
 on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: "Log level"
+        required: true
+        default: "warning"
+        type: choice
+        options:
+          - info
+          - warning
+          - debug
   push:
     branches: ["develop"]
   pull_request:
     branches: ["develop"]
-  workflow_dispatch:
 
 jobs:
   build:
