--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,14 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_method $request_method;
+        
+        proxy_read_timeout 90;
+        proxy_connect_timeout 90;
+        proxy_send_timeout 90;
+
+        client_max_body_size 10m;
     }
 }
 
@@ -18,6 +26,5 @@ server {
     listen 80;
     server_name dev.api.ctu-tb.gaxil.eu;
 
-    # Redirect HTTP to HTTPS
     return 301 https://$host$request_uri;
 }
